# hypodermic

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Hypodermic/: Hypodermic.vcxproj  Hypodermic.vcxproj.filters  resource.rc
Hypodermic.Tests/: Hypodermic.Tests.vcxproj  Hypodermic.Tests.vcxproj.filters
builds/: .gitignore
builds/msvc/vs2013/: hypodermic.import.props  hypodermic.import.xml  hypodermic.sln
builds/msvc/vs2013/hypodermic/: hypodermic.props  hypodermic.vcxproj  (+2 more)
include/Hypodermic/: CMakeLists.txt  ComponentRegistration.h  ComponentRegistrationLifetimeDecorator.h  ComponentRegistry.h  Container.h  ContainerBuilder.h  CopyOnWriteRegistry.h  DelegateActivator.h  DelegateActivator.hpp  ExternalRegistrySource.h  ForwardTypeCaster.h  IComponentContext.hpp  IComponentRegistration.h  IComponentRegistry.h  ILifetimeScope.h  IRegistrationBuilder.h  IRegistrationSource.h  LifetimeScope.h  MatchingScopeLifetime.h  RegistrationBuilder.h  RegistrationBuilder.hpp  RegistrationBuilderFactory.h  RegistrationBuilderFactory.hpp  ScopeRestrictedRegistry.h  ServiceRegistrationInfo.h
packaging/nuget/: package.config  package.gsl  package.nuspec  package.targets  package.xml
src/: CMakeLists.txt  CircularDependencyDetector.cpp  ComponentRegistration.cpp  ComponentRegistrationLifetimeDecorator.cpp  ComponentRegistry.cpp  Container.cpp  ContainerActivator.cpp  ContainerBuilder.cpp  CopyOnWriteRegistry.cpp  CurrentLifetimeScope.cpp  DependencyResolutionException.cpp  ExternalRegistrySource.cpp  ForwardTypeCaster.cpp  InstanceActivator.cpp  InstanceLookup.cpp  KeyedService.cpp  LifetimeScope.cpp  MatchingScopeLifetime.cpp  RegistrationData.cpp  ResolveOperation.cpp  RootScopeLifetime.cpp  ScopeRestrictedRegistry.cpp  ServiceKey.cpp  ServiceRegistrationInfo.cpp  SingleRegistrationStyle.cpp  TypedService.cpp
tests/: CMakeLists.txt  ContainerBuilderTests.cpp  main.cpp
(+4 files in other folders)
